# OpenPostbud

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  SCHEMAS.md  docker-compose.dev.yml  docker-compose.server.yml  docker-compose.yml  pyproject.toml
.docker/app/: Dockerfile
.docker/office/: Dockerfile
.docker/templates/: default.conf.template
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: Linting.yml  Version_Check.yml  linting.yml  pr.yml  test.yml
.woodpecker/: stg.yml
src/OpenPostbud/: __main__.py  config.py  main.py  ui_components.py
src/OpenPostbud/database/: __init__.py  api_users.py  audit_log.py  base.py  common.py  connection.py  db_util.py  document_storage.py  encrypted_string.py  users.py
src/OpenPostbud/database/check_registration/: registration_job.py  registration_task.py
src/OpenPostbud/database/data_types/: encrypted_string.py  id_generator.py  obfuscated_id.py
src/OpenPostbud/database/digital_post/: db_util.py  field_rules.py  letters.py  shipments.py  templates.py
src/OpenPostbud/database/migrations/: migrate.py  schema_util.py
src/OpenPostbud/database/migrations/sql/: 001_Initial.sql  002_AddOwnerGroups.sql  002_add_post_type.sql  003_add_field_rules.sql
src/OpenPostbud/database/nemsms/: nemsms_messages.py  nemsms_shipments.py
src/OpenPostbud/middleware/: audit_log.py  authentication.py
src/OpenPostbud/pages/: admin_login.py  forsendelser.py  front_page.py  login.py  send_post.py
src/OpenPostbud/pages/forsendelser/: forsendelser.py  send_post.py
src/OpenPostbud/pages/tilmeldinger/: opret_tilmelding.py  tjek_tilmelding.py
src/OpenPostbud/routes/: admin_login.py  login.py
src/OpenPostbud/routes/admin/: api_users.py  field_rules.py  router.py
src/OpenPostbud/routes/api/: dependencies.py  router.py  shipments.py
src/OpenPostbud/routes/auth/: admin_login.py  login.py  router.py  token.py
src/OpenPostbud/routes/user/: forsendelser.py  front_page.py  opret_tilmelding.py  router.py  send_post.py  tjek_tilmelding.py
src/OpenPostbud/utils/: docx_util.py
src/OpenPostbud/workers/: message_broker_worker.py  nemsms_worker.py  pdf_converter.py  registration_worker.py  shipment_worker.py
test_data/: Data_01.csv  Duplicates.csv  Invalid.csv  Merge_data - BOM.csv  Merge_data - big.csv  Merge_data digital.csv  Merge_data physical.csv  Merge_data.csv  Reg_list.txt  Registration_data - BOM.txt  Template_01 - broken.docx  Template_01.docx
tests/: __init__.py  db_test_case.py  test_api_users.py  test_audit_log.py  test_common.py  test_document_storage.py  test_encrypted_string.py  test_field_rules.py  test_id_generator.py  test_letters.py  test_nemsms.py  test_registration.py  test_shipments.py  test_templates.py
tests/test_database/: builders.py  db_test_case.py  test_api_users.py  test_audit_log.py  test_common.py  test_encrypted_string.py  test_letters.py  test_nemsms.py  test_registration.py  test_shipments.py  test_templates.py
(+2 files in other folders)
