[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenPostbud"
version = "0.1.1"
authors = [
  { name="Mathias Gammelgaard", email="ghbm@aarhus.dk" },
]
description = "A package containing the OpenPostbud application."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cryptography>=43",
    "SQLAlchemy>=2",
    "nicegui>=3.9",
    "python-dotenv>=1",
    "python_serviceplatformen>=3.1,<4",
    "passlib>=1.7",
    "PyJWT>=2.10",
    "docxtpl>=0.20.2",
]

[project.urls]
"Homepage" = "https://github.com/itk-dev-rpa/OpenPostbud"
"Bug Tracker" = "https://github.com/itk-dev-rpa/OpenPostbud/issues"

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8",
  "selenium"
]

[project.scripts]
OpenPostbud = "OpenPostbud.__main__:main"

[tool.pylint]
good-names = ["OpenPostbud"]
allowed-redefined-builtins = ["id"]

disable = [
  "line-too-long",
  "too-many-locals",
  "too-few-public-methods",
  "logging-fstring-interpolation",
  "duplicate-code"
]
